# reportanalytics

./: Readme.md  pyproject.toml
src/reportanalytics/: analyzer.py  utils.py
src/reportanalytics/files/: ewords.txt  gwords.txt  swords.txt
