[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reportanalytics"
version = "0.0.1"
authors = [
  { name="Ralf Kellner", email="ralf.kellner@uni-passau.de" },
]
description = "A package to identify topics and sentences by words in financial reports"
readme = "Readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.23.5",
    "scikit-learn>=1.2.0",
    "pandas",
    "gensim==4.3.0",
    "umap-learn>=0.5.1",
    "hdbscan>=0.8.27",
    "nltk==3.8.1",
    "matplotlib==3.7.0",
    "dropbox",
    "jupyter"
]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"reportanalytics.files" = ["*.pkl", "*.txt"]